--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,12 +1,13 @@
 <ion-view view-title="Dashboard">
-  <ion-content class="padding">
+  <ion-content class="">
+
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="refresh()"></ion-refresher>
     <div style="font-size: 17px; text-align: center; background: white; border-bottom: 0px; padding-top: 0px; padding-bottom: 0px;" class="item item-divider">
       <a class="button button-block button-royal" href="#/tab/manage-schedule-calendar"><i class="icon ion-calendar"></i> View Calendar Schedules</a>
     </div>
     <div class="list card" style="margin-top: 0px;">
       <div class="item item-divider" ng-click="redirectToAppointments()">
-        <i class="icon ion-ios-book"></i>
+        <!-- <i class="icon ion-ios-book"></i> -->
         Appointments
       </div>
       <div class="item" ng-click="redirectToAppointments()">
@@ -15,7 +16,7 @@
               <div ng-if="isAppointmentsLoading" style="text-align: center;">
                 <ion-spinner icon="spiral"></ion-spinner><br>
               </div>
-              <b ng-if="!isAppointmentsLoading"><h1 class="energized">{{appointments.pending.length}}</h1></b>
+              <b ng-if="!isAppointmentsLoading"><h1 style="color: #E5C037">{{appointments.pending.length}}</h1></b>
               <b>Pending</b>
 
 
@@ -24,7 +25,7 @@
               <div ng-if="isAppointmentsLoading" style="text-align: center;">
                 <ion-spinner icon="spiral"></ion-spinner><br>
               </div>
-              <b ng-if="!isAppointmentsLoading"><h1 class="positive">{{appointments.accepted.length}}</h1></b>
+              <b ng-if="!isAppointmentsLoading"><h1 style="color: #528FF6;">{{appointments.accepted.length}}</h1></b>
               <b>Accepted</b>
           </div>
         </div>
@@ -36,7 +37,7 @@
               <div ng-if="isAppointmentsLoading" style="text-align: center;">
                 <ion-spinner icon="spiral"></ion-spinner><br>
               </div>
-              <b ng-if="!isAppointmentsLoading"><h1 class="balanced">{{appointments.completed.length}}</h1></b>
+              <b ng-if="!isAppointmentsLoading"><h1 style="color: #51BB70;">{{appointments.completed.length}}</h1></b>
               <b>Completed</b>
 
 
@@ -45,7 +46,7 @@
               <div ng-if="isAppointmentsLoading" style="text-align: center;">
                 <ion-spinner icon="spiral"></ion-spinner><br>
               </div>
-              <b ng-if="!isAppointmentsLoading"><h1 class="assertive" >{{appointments.canceled.length}}</h1></b>
+              <b ng-if="!isAppointmentsLoading"><h1 style="color: #f1807a;" >{{appointments.canceled.length}}</h1></b>
               <b>Canceled</b>
             </div>
           </div>
@@ -56,7 +57,7 @@
     <div class="list card">
 
       <div class="item item-divider">
-        <i class="icon ion-ios-chatboxes"></i>
+        <!-- <i class="icon ion-ios-chatboxes"></i> -->
         Inbox
       </div>
       <div ng-if="isMessagesLoading" style="text-align: center; padding-top: 25px;">
@@ -76,7 +77,7 @@
 
     <div class="list card">
       <div class="item item-divider">
-        <i class="icon ion-ios-compose"></i>
+        <!-- <i class="icon ion-ios-compose"></i> -->
         Reviews
       </div>
       <div ng-if="isReviewsLoading" style="text-align: center; padding-top: 25px;">
