--- a/www/templates/manage-services.html
+++ b/www/templates/manage-services.html
@@ -5,10 +5,14 @@
       <button class="button button-block button-royal" ng-click="addService()">Add New Service</button>
     </label>
 
-
-    <div class="item item-divider">
-      My Services (<b>{{artistServices.length}}</b>)
+    <div ng-if="isLoading" style="text-align: center; padding-top: 50%;">
+      <ion-spinner icon="spiral"></ion-spinner><br>
+      <span>Loading Services...</span>
     </div>
+
+    <!-- <div class="item item-divider">
+      My Services (<b>{{artistServices.length}}</b>)
+    </div> -->
 
     <div class="card" ng-repeat="service in artistServices">
       <div style="height: 50px;" class="item item-divider item-button-right">
@@ -32,8 +36,8 @@
           <div class="col">
             <span><b>Duration</b>: {{service.attributes.duration}} mins</span>
           </div>
-          <div class="col">
-            <span class="text-right"><b>Price</b>: P{{service.attributes.price}}</span>
+          <div class="col text-right">
+            <span><b>Price</b>: P{{service.attributes.price}}</span>
           </div>
         </div>
       </div>
