added forgot password

--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -79,18 +79,8 @@
         </div>
 
         <label class="item">
-          <button class="button button-block button-small button-balanced" ng-click="isChangePassword = true;">Change My Password</button>
+          <button class="button button-block button-small button-balanced" ng-click="changePassword()">Change My Password</button>
         </label>
-        <div ng-show="isChangePassword">
-          <label class="item item-input item-floating-label">
-            <span class="input-label">Old Password</span>
-            <input type="password" placeholder="Old Password">
-          </label>
-          <label class="item item-input item-floating-label">
-            <span class="input-label">New Password</span>
-            <input type="password" placeholder="New Password">
-          </label>
-        </div>
 
         <div class="row" style="border-top-width: 2px; border-top-color: #444; border-top-style: dashed;">
           <div class="col-50">
