--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -2,7 +2,7 @@
   <ion-content class="">
 
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="refresh()"></ion-refresher>
-    <div style="font-size: 17px; text-align: center; background: white; border-bottom: 0px; padding-top: 0px; padding-bottom: 0px;" class="item item-divider">
+    <div style="font-size: 17px; text-align: center; background: white; border-bottom: 0px; padding-bottom: 0px;" class="item item-divider">
       <a class="button button-block button-royal" href="#/tab/manage-schedule-calendar"><i class="icon ion-calendar"></i> View Calendar Schedules</a>
     </div>
     <div class="list card" style="margin-top: 0px;">
