--- a/www/templates/manage-service-modal.html
+++ b/www/templates/manage-service-modal.html
@@ -49,11 +49,11 @@
 		</div>
 		<br>
 		<div class="row" style="padding-left: 3%; padding-right: 3%;" ng-if="isModalEdit">
-			<div class="col"><img ng-if="service.servicePhotos[0].path" ng-src="{{service.servicePhotos[0].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.servicePhotos[0].path, 0)"></div>
-			<div class="col"><img ng-if="service.servicePhotos[1].path" ng-src="{{service.servicePhotos[1].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.servicePhotos[1].path, 1)"></div>
-			<div class="col"><img ng-if="service.servicePhotos[2].path" ng-src="{{service.servicePhotos[2].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.servicePhotos[2].path, 2)"></div>
-			<div class="col"><img ng-if="service.servicePhotos[3].path" ng-src="{{service.servicePhotos[3].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.servicePhotos[3].path, 3)"></div>
-			<div class="col"><img ng-if="service.servicePhotos[4].path" ng-src="{{service.servicePhotos[4].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.servicePhotos[4].path, 4)"></div>
+			<div class="col"><img ng-if="service.servicePhotos[0].path" ng-src="{{service.servicePhotos[0].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.servicePhotos[0].path, 0)" class="animate-show" fade-in></div>
+			<div class="col"><img ng-if="service.servicePhotos[1].path" ng-src="{{service.servicePhotos[1].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.servicePhotos[1].path, 1)" class="animate-show" fade-in></div>
+			<div class="col"><img ng-if="service.servicePhotos[2].path" ng-src="{{service.servicePhotos[2].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.servicePhotos[2].path, 2)" class="animate-show" fade-in></div>
+			<div class="col"><img ng-if="service.servicePhotos[3].path" ng-src="{{service.servicePhotos[3].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.servicePhotos[3].path, 3)" class="animate-show" fade-in></div>
+			<div class="col"><img ng-if="service.servicePhotos[4].path" ng-src="{{service.servicePhotos[4].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.servicePhotos[4].path, 4)" class="animate-show" fade-in></div>
 		</div>
 
 		<label class="item" style="border-top-width: 0px;" ng-if="isModalEdit">
