--- a/www/templates/manage-services.html
+++ b/www/templates/manage-services.html
@@ -24,11 +24,11 @@
       <div class="item item-text-wrap">
         {{service.attributes.description}}
         <div class="row" style="padding-left: 3%; padding-right: 3%;">
-          <div class="col"><img ng-src="{{service.attributes.servicePhotos[0].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.attributes.servicePhotos[0].path, null)"></div>
-          <div class="col"><img ng-src="{{service.attributes.servicePhotos[1].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.attributes.servicePhotos[1].path, null)"></div>
-          <div class="col"><img ng-src="{{service.attributes.servicePhotos[2].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.attributes.servicePhotos[2].path, null)"></div>
-          <div class="col"><img ng-src="{{service.attributes.servicePhotos[3].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.attributes.servicePhotos[3].path, null)"></div>
-          <div class="col"><img ng-src="{{service.attributes.servicePhotos[4].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.attributes.servicePhotos[4].path, null)"></div>
+          <div class="col"><img ng-src="{{service.attributes.servicePhotos[0].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.attributes.servicePhotos[0].path, null)" class="animate-show" fade-in></div>
+          <div class="col"><img ng-src="{{service.attributes.servicePhotos[1].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.attributes.servicePhotos[1].path, null)" class="animate-show" fade-in></div>
+          <div class="col"><img ng-src="{{service.attributes.servicePhotos[2].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.attributes.servicePhotos[2].path, null)" class="animate-show" fade-in></div>
+          <div class="col"><img ng-src="{{service.attributes.servicePhotos[3].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.attributes.servicePhotos[3].path, null)" class="animate-show" fade-in></div>
+          <div class="col"><img ng-src="{{service.attributes.servicePhotos[4].path}}" alt="" style="width: 100%;" ng-click="viewServicePhoto(service.attributes.servicePhotos[4].path, null)" class="animate-show" fade-in></div>
         </div>
       </div>
       <div class="item item-divider">
