--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,6 +4,21 @@
 	height: 90%;
 }
 
+/* fade in image animate */
+
+.animate-show.ng-hide-add, .animate-show.ng-hide-remove {
+	transition: all linear 0.5s;
+	display: block !important;
+}
+
+.animate-show.ng-hide-add.ng-hide-add-active, .animate-show.ng-hide-remove {
+	opacity: 0;
+}
+
+.animate-show.ng-hide-add, .animate-show.ng-hide-remove.ng-hide-remove-active {
+	opacity: 1;
+}
+
 /* Overrides */
 
 .tabs {
