--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -31,6 +31,8 @@
 			</label>
 		</div>
 
+		<a ng-if="!isLoading" href="#" onclick="window.open('http://blush.ph/register.html', '_system', 'location=yes'); return false;" class="button button-block button-small button-light button-clear" style="color: #574C4F;  margin-top: 0px;"><b>Not yet a Blush-Artist? Register now!</b></a>
+
 		<div ng-if="isLoading" style="text-align: center; padding-top: 3px;">
 			<ion-spinner icon="spiral"></ion-spinner><br>
 			<span>Please Wait, Logging In...</span>
