--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -7,7 +7,7 @@
       </div>
       <div ng-if="threads.length === 0 && !isLoading"> <p style="padding-left: 15px; padding-right: 15px; text-align: center; padding-top: 50%;">You have no messages yet.</p></div>
       <ion-item ng-if="!isLoading && !thread.attributes.isArtistThreadDeleted" class="item-avatar item-icon-right" ng-repeat="thread in threads" type="item-text-wrap" href="#/tab/chats/{{thread.id}}/{{thread.attributes.customerInfo.id}}/{{thread.attributes.isNewMessageArtist}}">
-        <img ng-src="{{thread.attributes.customerInfo.avatar || spiral}}">
+        <img ng-src="{{thread.attributes.customerInfo.avatar || spiral}}" class="animate-show" fade-in>
         <h2 ng-class="{blushnewmessage: thread.attributes.isNewMessageArtist == true}">{{thread.attributes.customerInfo.firstName}} {{thread.attributes.customerInfo.lastName}}</h2>
         <p ng-class="{blushnewmessage: thread.attributes.isNewMessageArtist == true}">{{thread.attributes.lastMessage}}</p>
         <!-- <p style="font-size: 11px;">{{thread.attributes.updatedAt.toString() | limitTo:21}}</p> -->
